assets/style.css
/* ... */
.contact:hover::before {
    transform: scaleX(1);
}

.contact--link::after {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    content: "";
}

@media (min-width: 640px) {
    .contact-list {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 1024px) {
    .contact-list {
        grid-template-columns: repeat(4, 1fr);
    }
}

.project-nav {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    overflow-x: auto;
    column-gap: 8px;
    background-color: var(--color-slate-950);
    margin-left: -16px;
    margin-right: -16px;
    --indicator-width: 0;
    --indicator-left: 0;
}

.project-nav--big {
    position: relative;
    flex-wrap: wrap;
    z-index: 200;
    padding: 4px 16px;
}

.project-nav--stickied {
    position: sticky;
    top: calc(var(--header-height) + 48px);
    flex-wrap: nowrap;
    transform: translateY(-100%);
    z-index: 100;
    padding: 0 16px;
    scrollbar-gutter: stable;
    height: 48px;
    overflow-y: hidden;
}

.project-nav--stickied::before {
    content: "";
    position: absolute;
    top: 24px; /* Better than 50% */
    left: 0px;
    width: var(--indicator-width);
    height: 1px;
    transform: translateY(-50%) translateX(var(--indicator-left));
    transform-origin: left;
    height: 36px;
    background-color: var(--color-slate-800);
    border-radius: 16px;
    z-index: -1;
    transition: transform 250ms ease-in-out, width 250ms ease-in-out;
}

@media (min-width: 1024px) {
    .project-nav {
        margin-left: -32px;
        margin-right: -32px;
    }

    .project-nav--big {
        padding: 4px 32px;
    }
}

.project-nav--link {
    height: 48px;
    display: flex;
    flex-direction: row;
    cursor: pointer;
    gap: 8px;
    white-space: nowrap;
    align-items: center;
    text-decoration: none;
    color: currentColor;
    padding: 0px 8px;
    transition: color 350ms ease-in-out;
}

.project-nav--link:hover {
    color: var(--color-rose-300);
}

.project-nav--link:active {
    color: var(--color-rose-400);
}

.project-nav--stickied::-webkit-scrollbar {
    height: 6px;
}

.project-nav--item--active,
.project-nav--item--active .project-nav--link:hover,
.project-nav--item--active .project-nav--link:active {
    color: var(--color-rose-500);
}

.project-nav--stickied::-webkit-scrollbar-track {
    background-color: var(--color-slate-950);
}

.project-nav--stickied::-webkit-scrollbar-thumb {
    background-color: var(--color-slate-600);
    border-radius: 8px;
}

